disable autogeneration of autosummary targets, set the version to trunk

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -15,7 +15,7 @@ export SNAKEOIL_DEMANDLOAD_WARN = no
 export SNAKEOIL_DEMANDLOAD_PROTECTION = no
 export PYTHONPATH=../
 
-.PHONY: help clean html dirhtml singlehtml pickle json htmlhelp qthelp devhelp epub latex latexpdf text man changes linkcheck doctest generated
+.PHONY: help clean html dirhtml singlehtml pickle json htmlhelp qthelp devhelp epub latex latexpdf text man changes linkcheck doctest generated api
 
 help:
 	@echo "Please use \`make <target>' where <target> is one of"
@@ -43,7 +43,7 @@ generated: api
 
 api:
 	@echo "autogenerating api rsts..."
-	@mkdir api -p
+	@mkdir -p api
 	@for fn in `cat public_modules.txt`; \
 		do echo $${fn} api/$${fn}.rst; \
 	done | ./generate_api_rsts.py
