add the changes builder (reliant on versioning markers), tweak clean target to leave no trace

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -37,7 +37,7 @@ help:
 	@echo "  doctest    to run all doctests embedded in the documentation (if enabled)"
 
 clean:
-	-rm -rf $(BUILDDIR)/* api
+	-rm -rf $(BUILDDIR) api
 
 generated: api
 
@@ -52,6 +52,12 @@ html: generated
 	$(SPHINXBUILD) -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html
 	@echo
 	@echo "Build finished. The HTML pages are in $(BUILDDIR)/html."
+
+changes: generated
+	$(SPHINXBUILD) -b changes $(ALLSPHINXOPTS) $(BUILDDIR)/changes
+	@echo
+	@echo "Build finished. The changelog is in ${BUILDDIR}/changes."
+
 
 dirhtml: generated
 	$(SPHINXBUILD) -b dirhtml $(ALLSPHINXOPTS) $(BUILDDIR)/dirhtml
