--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,6 @@ python:
     - "2.7"
     - "3.2"
     - "3.3"
-script: python setup.py test
+install: pip install coverage coveralls
+script: coverage run --source=snakeoil setup.py test
 after_success: coveralls
