travis-ci: make sure to run build_py before tests
This forces 2to3 to be run for python3 envs.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,6 @@ python:
 install: pip install pytest-cov coveralls
 script:
     - python setup.py build_ext -i
+    - python setup.py build_py -i
     - py.test -v --cov snakeoil
 after_success: coveralls
