--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: python
 python:
-    - "2.7"
-    - "3.2"
-    - "3.3"
+    - 2.7
+    - 3.2
+    - 3.3
 install: pip install pytest-cov coveralls
 script:
-    - python setup.py build_ext -i
-    - python setup.py build_py -i
+    - python setup.py build
+    - cd build/lib*
     - py.test -v --cov snakeoil
 after_success: coveralls
