--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
     - 3.3
 install: pip install pytest-cov coveralls
 script:
-    - python setup.py build
+    - python setup.py install --install-headers "${VIRTUAL_ENV}"/include/snakeoil
     - cd build/lib*
-    - py.test -v --cov snakeoil
+    - py.test -v --cov-config ../../.coveragerc --cov snakeoil snakeoil
 after_success: coveralls
