--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
     - 3.2
     - 3.3
     - 3.4
-install: pip install pytest-cov coveralls pylint
+install: pip install pytest-cov coveralls pylint astng
 script:
     - python setup.py install --install-headers "${VIRTUAL_ENV}"/include/snakeoil
     - pushd build/lib*
