--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
     - 3.2
     - 3.3
     - 3.4
-install: pip install pytest-cov coveralls pylint logilab-astng
+install: pip install pytest-cov coveralls pylint
 script:
     - python setup.py install --install-headers "${VIRTUAL_ENV}"/include/snakeoil
     - pushd build/lib*
