convert NEWS and README into rst files
This allows use to use the github renderer to show a better README file
by default and deprecate/drop the usage of the custom txt -> rst news
generation method for building the docs.

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -41,7 +41,7 @@ help:
 clean:
 	-rm -rf $(BUILDDIR) api
 
-generated: api news
+generated: api
 
 api:
 	@echo "autogenerating api rsts..."
@@ -50,10 +50,6 @@ api:
 	@for fn in `cat public_modules.txt`; \
 		do echo $${fn} api/$${fn}.rst; \
 	done | $(PYTHON) -m snakeoil.sphinx_utils.generate_api_rsts
-
-news:
-	@echo "autogenerating news.rst..."
-	$(PYTHON) -m snakeoil.sphinx_utils.generate_news_rst snakeoil ../NEWS news.rst 'git_release' 'git_tag'
 
 html: generated
 	$(SPHINXBUILD) -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html
