--- a/.landscape.yaml
+++ b/.landscape.yaml
@@ -1,6 +1,6 @@
 doc-warnings: yes
-test-warnings: yes
-strictness: high
+test-warnings: no
+strictness: medium
 max-line-length: 120
 autodetect: yes
 ignore-paths:
