doc: use sphinx-apidoc to auto-generate api documentation
This also drops some of the snakeoil.test API from being documented, but
realistically the only consumer of that should probably be pkgcore and
related tools.

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -41,15 +41,8 @@ help:
 clean:
 	-rm -rf $(BUILDDIR) api
 
-generated: api
-
-api:
-	@echo "autogenerating api rsts..."
-	@mkdir -p api
-	@echo "pythonpath=${PYTHONPATH}"
-	@for fn in `cat public_modules.txt`; \
-		do echo $${fn} api/$${fn}.rst; \
-	done | $(PYTHON) -m snakeoil.sphinx_utils.generate_api_rsts
+generated:
+	sphinx-apidoc -ef -o api ../snakeoil ../snakeoil/test
 
 html: generated
 	$(SPHINXBUILD) -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html
