travis-ci: use coverage instead of pytest-cov
I've had various troubles making pytest-cov generate proper coverage
data in certain cases and this allows us to more easily use an
alternative to pytest if we want to.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,13 @@ python:
     - 3.2
     - 3.3
     - 3.4
-install: pip install pytest-cov coveralls pylint
-script:
+install:
+    - pip install coverage coveralls pylint
     - python setup.py install --install-headers "${VIRTUAL_ENV}"/include/snakeoil
+script:
     - pushd build/lib*
-    - py.test -v --cov-config .coveragerc --cov snakeoil snakeoil
+    - coverage run --source snakeoil -m py.test
+    - coverage report
 after_success:
     # upload coverage data to coveralls.io
     - coveralls
