don't track testsuite coverage

--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,6 @@ deps =
 	pytest
 	coverage
 commands =
-	coverage run --source snakeoil -m py.test snakeoil/test
+	coverage run --source snakeoil --omit "snakeoil/test/*" -m py.test snakeoil/test
 	coverage report -m
 	coverage html -d {envdir}/coverage
