--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
     - python setup.py install --install-headers "${VIRTUAL_ENV}"/include/snakeoil
 script:
     - pushd build/lib*
-    - coverage run --source snakeoil -m py.test
+    - coverage run --source snakeoil --omit "snakeoil/test/*" -m py.test snakeoil/test
     - coverage report
 after_success:
     # upload coverage data to coveralls.io
