--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,3 +2,4 @@ include AUTHORS BSD GPL2 LICENSE *.rst tox.ini
 recursive-include doc *
 recursive-include include/snakeoil *.h
 recursive-include src *.[ch]
+global-exclude *.pyc *.pyo __pycache__
