--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,16 @@
 [tox]
 envlist = py27, py33, py34
 [testenv]
+whitelist_externals = cp
 install_command = pip install {opts} --upgrade {packages}
 changedir = {envsitepackagesdir}
 setenv =
 	PYTHONPATH = {envsitepackagesdir}
 deps =
 	pytest
-	coverage
+	coverage>3.9
 commands =
-	coverage run --source snakeoil --omit "snakeoil/test/*" -m py.test snakeoil/test
-	coverage report -m
-	coverage html -d {envdir}/coverage
+	cp "{toxinidir}/.coveragerc" "{envsitepackagesdir}"
+	coverage run -m py.test {posargs:snakeoil/test}
+	coverage report
+	coverage html -d "{envdir}/coverage"
