--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,3 @@
-# config linter: https://lint.travis-ci.org/
-
 language: python
 python:
     - 2.7
@@ -8,11 +6,12 @@ python:
 install: pip install tox coveralls pylint
 script: tox -e py
 after_success:
-    # upload coverage data to coveralls.io
-    - pushd .tox/py/lib/python${TRAVIS_PYTHON_VERSION}/site-packages
-    - coveralls
-    - popd
-
-    # run pylint checks
+    # convert pylint plugins as necessary for py3k
     - if [[ ${TRAVIS_PYTHON_VERSION} == 3* ]]; then 2to3 -wn lintplugin/*.py; fi
-    - ./pylint -f colorized --reports y build/lib*/snakeoil
+
+    - pushd .tox/py/lib/python${TRAVIS_PYTHON_VERSION}/site-packages
+    # upload coverage data to coveralls.io
+    - coveralls
+    # run pylint checks
+    - ${TRAVIS_BUILD_DIR}/pylint -f colorized --reports y snakeoil
+    - popd
