--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,15 @@
 language: python
-python: 3.4
-env:
-    - TOXENV=py27
-    - TOXENV=py33
-    - TOXENV=py34
+python:
+    - 2.7
+    - 3.3
+    - 3.4
 install: pip install tox coveralls pylint
-script: tox
+script: tox -e py
 after_success:
     # convert pylint plugins as necessary for py3k
     - if [[ ${TRAVIS_PYTHON_VERSION} == 3* ]]; then 2to3 -wn lintplugin/*.py; fi
 
-    - pushd .tox/${TOXENV}/lib/python*/site-packages
+    - pushd .tox/py/lib/python${TRAVIS_PYTHON_VERSION}/site-packages
     # upload coverage data to coveralls.io
     - coveralls
     # run pylint checks
