tox: add pylint target (use tox -e lint to run)

--- a/tox.ini
+++ b/tox.ini
@@ -14,3 +14,18 @@ commands =
 	coverage run -m py.test {posargs:snakeoil/test}
 	coverage report
 	coverage html -d "{envdir}/coverage"
+
+[testenv:lint]
+whitelist_externals =
+	bash
+	cp
+install_command = pip install {opts} --upgrade {packages}
+changedir = {envsitepackagesdir}
+setenv =
+	PYTHONPATH = {envsitepackagesdir}
+deps = pylint
+commands =
+	cp -r "{toxinidir}"/lintplugin ./
+	cp "{toxinidir}"/pylint ./snakeoil-pylint
+	bash -c "[[ $({envpython} -c 'import sys; print(sys.version[0])') == "3" ]] && 2to3 -wn lintplugin"
+	./snakeoil-pylint -f colorized --reports y snakeoil
