test: add tests for mount() from snakeoil.osutils

--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ setenv =
 	PYTHONPATH = {envsitepackagesdir}
 deps =
 	pytest
+	mock
 	coverage>3.9
 commands =
 	cp "{toxinidir}/.coveragerc" "{envsitepackagesdir}"
