--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
     - 2.7
     - 3.3
     - 3.4
-install: pip install tox coveralls
+install: pip install 'tox<2' coveralls
 script: tox -e py
 after_success:
     # convert pylint plugins as necessary for py3k
