tox: bump coverage to >= 4.0a1

--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ setenv =
 deps =
 	pytest
 	mock
-	coverage>3.9
+	coverage>=4.0a1
 commands =
 	cp "{toxinidir}/.coveragerc" "{envsitepackagesdir}"
 	coverage run -m py.test {posargs:snakeoil/test}
