--- a/tox.ini
+++ b/tox.ini
@@ -8,13 +8,13 @@ setenv =
 	PYTHONPATH = {envsitepackagesdir}
 deps =
 	pytest
+	pytest-xdist
+	pytest-cov
 	mock
 	coverage>=4.0a1
 commands =
 	cp "{toxinidir}/.coveragerc" "{envsitepackagesdir}"
-	coverage run -m py.test {posargs:snakeoil/test}
-	coverage report
-	coverage html -d "{envdir}/coverage"
+	py.test {posargs:-n 4 --cov pkgcore pkgcore/test}
 
 [testenv:lint]
 whitelist_externals =
@@ -30,3 +30,6 @@ commands =
 	cp "{toxinidir}"/pylint ./snakeoil-pylint
 	bash -c "[[ $({envpython} -c 'import sys; print(sys.version[0])') == "3" ]] && 2to3 -wn lintplugin"
 	./snakeoil-pylint -f colorized --reports y snakeoil
+
+# stub for travis-ci python nightlies tests
+[testenv:pynightly]
