tox: another copy/paste mistake

--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@ deps =
 	mock
 commands =
 	cp "{toxinidir}/.coveragerc" "{envsitepackagesdir}"
-	py.test {posargs:-n 4 --cov pkgcore pkgcore/test}
+	py.test {posargs:-n 4 --cov snakeoil snakeoil/test}
 
 [testenv:lint]
 whitelist_externals =
