--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ after_success:
   # convert pylint plugins as necessary for py3k
   - if [[ ${TRAVIS_PYTHON_VERSION} == 3* ]]; then 2to3 -wn lintplugin/*.py; fi
 
-  - pushd .tox/py/lib/python${TRAVIS_PYTHON_VERSION}/site-packages
+  - pushd .tox/py${TRAVIS_PYTHON_VERSION/\./}/lib/python*/site-packages
   # upload coverage data to coveralls.io
   - coveralls
   # run pylint checks
