tox: update pylint target for pkgdist file moves

--- a/tox.ini
+++ b/tox.ini
@@ -26,9 +26,9 @@ setenv =
 deps = pylint
 commands =
 	cp -r "{toxinidir}"/lintplugin ./
-	cp "{toxinidir}"/pylint ./snakeoil-pylint
+	cp "{toxinidir}"/pkgdist/pylint ./pkgdist/snakeoil-pylint
 	bash -c "[[ $({envpython} -c 'import sys; print(sys.version[0])') == "3" ]] && 2to3 -wn lintplugin"
-	./snakeoil-pylint -f colorized --reports y snakeoil
+	./pkgdist/snakeoil-pylint -f colorized --reports y snakeoil
 
 # stub for travis-ci python nightlies tests
 [testenv:pynightly]
