setup: remove build_docs target, just use build_sphinx as needed
This requires using setuptools explicitly.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,11 @@
+[aliases]
+build_html = build_sphinx -b html
+
+[build_sphinx]
+source-dir = doc
+build-dir  = build/sphinx
+all_files  = 1
+
 [build_ext]
 # uncomment if you don't want to build the extension modules
 #build-optional=false
