--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,6 @@
 [tox]
 envlist = py27, py33, py34
+skipsdist = True
 [testenv]
 whitelist_externals = cp
 changedir = {envsitepackagesdir}
@@ -11,6 +12,7 @@ deps =
 	pytest-cov
 	mock
 commands =
+	pip install "{toxinidir}"
 	cp "{toxinidir}/.coveragerc" "{envsitepackagesdir}"
 	py.test {posargs:-n 4 --cov snakeoil snakeoil/test}
 
