tox: output xml coverage data for codecov

--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ deps =
 commands =
 	pip install "{toxinidir}"
 	cp "{toxinidir}/.coveragerc" "{envsitepackagesdir}"
-	py.test {posargs:-n 4 --cov snakeoil snakeoil/test}
+	py.test {posargs:-n 4 --cov-report xml --cov snakeoil snakeoil/test}
 
 [testenv:lint]
 whitelist_externals =
