travis-ci: try to simplify submitting coverage data

--- a/tox.ini
+++ b/tox.ini
@@ -15,6 +15,7 @@ commands =
 	pip install "{toxinidir}"
 	cp "{toxinidir}/.coveragerc" "{envsitepackagesdir}"
 	py.test {posargs:-n 4 --cov-report xml --cov snakeoil snakeoil/test}
+	cp coverage.xml "{toxinidir}"
 
 [testenv:lint]
 whitelist_externals =
