tox: add specific travis-ci testenv target
Allows us to separate CI functionality from regular manual runs such as
outputting more human readable html coverage data for local runs while
using xml on travis.

--- a/tox.ini
+++ b/tox.ini
@@ -14,8 +14,7 @@ deps =
 commands =
 	pip install "{toxinidir}"
 	cp "{toxinidir}/.coveragerc" "{envsitepackagesdir}"
-	py.test {posargs:-n 4 --cov-report xml --cov snakeoil snakeoil/test}
-	cp coverage.xml "{toxinidir}"
+	py.test {posargs:-n 4 --cov-report html --cov snakeoil snakeoil/test}
 
 [testenv:lint]
 whitelist_externals =
@@ -31,5 +30,10 @@ commands =
 	bash -c "[[ $({envpython} -c 'import sys; print(sys.version[0])') == "3" ]] && 2to3 -wn lintplugin"
 	./pkgdist/snakeoil-pylint -f colorized --reports y snakeoil
 
-# stub for travis-ci python nightlies tests
-[testenv:pynightly]
+# stub for travis-ci
+[testenv:travis]
+commands =
+	pip install "{toxinidir}"
+	cp "{toxinidir}/.coveragerc" "{envsitepackagesdir}"
+	py.test {posargs:-n 4 --cov-report xml --cov snakeoil snakeoil/test}
+	cp coverage.xml "{toxinidir}"
