--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ cache:
   directories:
     - $HOME/.cache/pip
 install: pip install 'tox<2' codecov
-script: tox -e py${TRAVIS_PYTHON_VERSION/\./}
+script: tox -e travis
 after_success:
   # upload coverage data to codecov.io
   - codecov
