travis-ci: keep coveralls support around for now
We'll decide which one to use after trying both out for a while.

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,9 @@ sudo: false
 cache:
   directories:
     - $HOME/.cache/pip
-install: pip install 'tox<2' codecov
+install: pip install 'tox<2' 'coveralls>0.5' codecov
 script: tox -e travis
 after_success:
-  # upload coverage data to codecov.io
+  # upload coverage data
+  - coveralls
   - codecov
