--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ sudo: false
 cache:
   directories:
     - $HOME/.cache/pip
-install: pip install 'tox<2' 'coveralls>0.5' codecov
+install: pip install tox 'coveralls>0.5' codecov
 script: tox -e travis
 after_success:
   # upload coverage data
