--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,11 @@ sudo: false
 cache:
   directories:
     - $HOME/.cache/pip
-install: pip install tox 'coveralls>0.5' codecov
+install: pip install tox coveralls codecov
 script: tox -e travis
 after_success:
   # upload coverage data
+  - pushd .tox/travis/lib/python*/site-packages
   - coveralls
   - codecov
+  - popd
