--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,9 @@
 envlist = py27, py33, py34
 skipsdist = True
 [testenv]
-whitelist_externals = cp
+whitelist_externals =
+	cp
+	mv
 changedir = {envsitepackagesdir}
 setenv =
 	PYTHONPATH = {envsitepackagesdir}
@@ -15,11 +17,12 @@ commands =
 	pip install "{toxinidir}"
 	cp "{toxinidir}/.coveragerc" "{envsitepackagesdir}"
 	py.test {posargs:-n 4 --cov-report html --cov snakeoil snakeoil/test}
+	mv "{envsitepackagesdir}"/htmlcov "{envdir}"
 
 # stub for travis-ci
 [testenv:travis]
+passenv = TRAVIS TRAVIS_JOB_ID TRAVIS_BRANCH
 commands =
 	pip install "{toxinidir}"
 	cp "{toxinidir}/.coveragerc" "{envsitepackagesdir}"
-	py.test {posargs:-n 4 --cov-report xml --cov snakeoil snakeoil/test}
-	cp coverage.xml "{toxinidir}"
+	py.test {posargs:-n 4 --cov-report= --cov snakeoil snakeoil/test}
