tox: remove old coverage dir if it exists
Otherwise rerunning tests can fail if the old dir exists.

--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@ skipsdist = True
 whitelist_externals =
 	cp
 	mv
+	rm
 changedir = {envsitepackagesdir}
 setenv =
 	PYTHONPATH = {envsitepackagesdir}
@@ -17,6 +18,7 @@ commands =
 	pip install "{toxinidir}"
 	cp "{toxinidir}/.coveragerc" "{envsitepackagesdir}"
 	py.test {posargs:-n 4 --cov-report html --cov snakeoil snakeoil/test}
+	rm -rf "${envdir}"/htmlcov
 	mv "{envsitepackagesdir}"/htmlcov "{envdir}"
 
 # stub for travis-ci
