tox: add doc target to test html doc builds

--- a/tox.ini
+++ b/tox.ini
@@ -21,6 +21,16 @@ commands =
 	rm -rf "${envdir}"/htmlcov
 	mv "{envsitepackagesdir}"/htmlcov "{envdir}"
 
+[testenv:doc]
+whitelist_externals = make
+changedir = {toxinidir}
+setenv =
+    PYTHONPATH = {envsitepackagesdir}
+deps =
+    sphinx
+commands =
+    make -C doc {posargs:html}
+
 # stub for travis-ci
 [testenv:travis]
 passenv = TRAVIS TRAVIS_JOB_ID TRAVIS_BRANCH
