tox: use symlinks for coverage files instead of moving/copying

--- a/tox.ini
+++ b/tox.ini
@@ -2,10 +2,7 @@
 envlist = py27, py34, py35
 skipsdist = True
 [testenv]
-whitelist_externals =
-	cp
-	mv
-	rm
+whitelist_externals = ln
 changedir = {envsitepackagesdir}
 setenv =
 	PYTHONPATH = {envsitepackagesdir}
@@ -16,10 +13,9 @@ deps =
 	mock
 commands =
 	pip install "{toxinidir}"
-	cp "{toxinidir}/.coveragerc" "{envsitepackagesdir}"
+	ln -sfn "{toxinidir}/.coveragerc" "{envsitepackagesdir}"
 	py.test {posargs:-n 4 --cov-report html --cov snakeoil snakeoil/test}
-	rm -rf "${envdir}"/htmlcov
-	mv "{envsitepackagesdir}"/htmlcov "{envdir}"
+	ln -sfn "{envsitepackagesdir}"/htmlcov "{envdir}"
 
 [testenv:doc]
 whitelist_externals = make
@@ -36,5 +32,5 @@ commands =
 passenv = TRAVIS TRAVIS_JOB_ID TRAVIS_BRANCH
 commands =
 	pip install "{toxinidir}"
-	cp "{toxinidir}/.coveragerc" "{envsitepackagesdir}"
+	ln -sfn "{toxinidir}/.coveragerc" "{envsitepackagesdir}"
 	py.test {posargs:-n 4 --cov-report= --cov snakeoil snakeoil/test}
