tox.ini: mock is only required for py27

--- a/tox.ini
+++ b/tox.ini
@@ -10,8 +10,8 @@ deps =
 	pytest
 	pytest-xdist
 	pytest-cov
+	py27: mock
 	cython
-	mock
 commands =
 	pip install "{toxinidir}"
 	ln -sfn "{toxinidir}/.coveragerc" "{envsitepackagesdir}"
