travis-ci: install cython to be able to build cython exts for sdist

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ sudo: false
 cache:
   directories:
     - $HOME/.cache/pip
-install: pip install tox coveralls codecov
+install: pip install tox coveralls codecov cython
 script: tox -e travis
 after_success:
   # upload coverage data
