--- a/.travis.yml
+++ b/.travis.yml
@@ -14,11 +14,10 @@ cache:
     - $HOME/.cache/pip
 install:
   - pip install --upgrade pip
-  - pip install --only-binary ":all:" tox coveralls codecov cython
+  - pip install --only-binary ":all:" tox codecov cython
 script: tox -e travis
 after_success:
   # upload coverage data
   - pushd .tox/travis/lib/python*/site-packages
-  - coveralls
   - codecov
   - popd
