--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,16 @@ python:
   - 3.4
   - 3.5
   - 3.6
-sudo: false
+env:
+  global:
+    - secure: "e0UbeSUtFbBFfD4keQiaeSHk3BaPvPms5lzdaDX2vAY3OEbkw1+TJfBrQ3P/epJ4vEfefe+paouLUk22W8F2I5ghWSA6uu1303g8td+2kKX896aspNY7jvb7ELVKp2NIzA3DFdn5/ybaOyWtC2bOdypVoYxvIT5MrOVoBuLdpnw="
+    - secure: "QdJ5ybg/mB+AXIWnLlUW2IA8h/MGuIsQoThe7AplSd/Ol6ZCe1idORH9P+ebroG4SRKGXUKnk5+QY6TX/gBg4LEt3ja/ELUf8eSkq5tkl5mGfm3nstsBuDDPLx2ogpIuqyoZ5k2wqjHs5q7+HrLvmAeTU7S+qWuwdZ3CNrS+x0I="
+    - CIBW_PLATFORM=linux
+    - CIBW_SKIP="cp26-* cp33-*"
+    - CIBW_BEFORE_BUILD="{pip} install --only-binary ':all:' cython"
+sudo: required
+services:
+  - docker
 cache:
   directories:
     - $HOME/.cache/pip
@@ -17,3 +26,14 @@ after_success:
   - pushd .tox/travis/lib/python*/site-packages
   - codecov
   - popd
+
+  # build/upload dist files for tagged builds
+  - |
+      if [[ $TRAVIS_PYTHON_VERSION == "2.7" ]] && [[ -n $TRAVIS_TAG ]]; then
+        python3 -m pip install --only-binary ':all:' cython
+        python3 setup.py sdist
+        pip install cibuildwheel
+        cibuildwheel --output-dir dist
+        pip install twine
+        twine upload dist/*
+      fi
