--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ deps =
 	pytest-xdist
 	pytest-cov
 	mock
-	cython
+	-rrequirements.txt
 commands =
 	ln -sfn "{toxinidir}/.coveragerc" "{envsitepackagesdir}"
 	py.test {posargs:-n 4 --cov-report html --cov snakeoil snakeoil/test}
