tox: use --cov-config to specify coveragerc instead of symlinking

--- a/tox.ini
+++ b/tox.ini
@@ -8,12 +8,11 @@ setenv =
 deps =
 	pytest
 	pytest-xdist
-	pytest-cov
+	pytest-cov>=2.5.1
 	mock
 	-rrequirements.txt
 commands =
-	ln -sfn "{toxinidir}/.coveragerc" "{envsitepackagesdir}"
-	py.test {posargs:-n 4 --cov-report html --cov snakeoil snakeoil/test}
+	py.test {posargs:-n 4 --cov-report html --cov snakeoil --cov-config "{toxinidir}/.coveragerc" snakeoil/test}
 	ln -sfn "{envsitepackagesdir}"/htmlcov "{envdir}"
 
 [testenv:doc]
@@ -30,5 +29,4 @@ commands =
 [testenv:travis]
 passenv = TRAVIS TRAVIS_JOB_ID TRAVIS_BRANCH
 commands =
-	ln -sfn "{toxinidir}/.coveragerc" "{envsitepackagesdir}"
-	py.test {posargs:-n 4 --cov-report= --cov snakeoil snakeoil/test}
+	py.test {posargs:-n 4 --cov-report= --cov snakeoil snakeoil/test --cov-config "{toxinidir}/.coveragerc"}
