--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,5 +2,5 @@ include AUTHORS BSD GPL2 LICENSE *.py *.rst tox.ini .coveragerc
 recursive-include doc *
 recursive-include include/snakeoil *.h
 recursive-include src *.[ch]
-recursive-include snakeoil *.pyx *.c
+recursive-include src/snakeoil *.pyx *.c
 global-exclude *.pyc *.pyo __pycache__
