--- a/tox.ini
+++ b/tox.ini
@@ -1,32 +1,29 @@
 [tox]
-envlist = py27, py34, py35, py36
+envlist = py27, py34, py35, py36, coverage-report
 [testenv]
-whitelist_externals = ln
-changedir = {envsitepackagesdir}
-setenv =
-	PYTHONPATH = {envsitepackagesdir}
 deps =
-	pytest
-	pytest-xdist
-	pytest-cov>=2.5.1
-	mock
-	-rrequirements.txt
+	-rrequirements/build.txt
+	-rrequirements/install.txt
+	-rrequirements/tox.txt
 commands =
-	py.test {posargs:-n 4 --cov-report html --cov snakeoil --cov-config "{toxinidir}/.coveragerc" snakeoil/test}
-	ln -sfn "{envsitepackagesdir}"/htmlcov "{envdir}"
+	coverage run --parallel -m pytest {posargs:-v} "{envsitepackagesdir}"/snakeoil
 
-[testenv:doc]
-whitelist_externals = make
-changedir = {toxinidir}
-setenv =
-    PYTHONPATH = {envsitepackagesdir}
-deps =
-    sphinx
+# generate coverage report
+[testenv:coverage-report]
+deps = coverage
+skip_install = true
 commands =
-    make -C doc {posargs:html}
+	coverage combine
+	coverage report
+
+# build docs
+[testenv:docs]
+deps =
+	-rrequirements/docs.txt
+commands =
+	python setup.py build_man build_docs
 
 # stub for travis-ci
 [testenv:travis]
-passenv = TRAVIS TRAVIS_JOB_ID TRAVIS_BRANCH
 commands =
-	py.test {posargs:-n 4 --cov-report= --cov snakeoil snakeoil/test --cov-config "{toxinidir}/.coveragerc"}
+	coverage run --parallel -m pytest {posargs:-v} "{envsitepackagesdir}"/snakeoil
