--- a/.travis.yml
+++ b/.travis.yml
@@ -19,24 +19,42 @@ cache:
     - "$HOME/.cache/pip"
 install:
   - pip install -U pip
-before_script: git clone https://github.com/pkgcore/pkgdist.git
+before_script:
+  - git clone https://github.com/pkgcore/pkgdist.git
 script:
   - cp -R pkgdist/requirements/* requirements/
   - pip install -r requirements/ci.txt
   - tox -e travis
-  - pkgdist/build-dist-files.sh
 after_success:
   # upload coverage data
   - tox -e coverage-report
   - codecov
 
-# push release tarballs to github
-deploy:
-  provider: releases
-  api_key:
-    secure: d1KgGpoHFf/au8m+08NItMGuENBZB5qwuVpobhtmZ2RQUo/uS6e0GoGa/k7OD0+3dQwzsSvJNMs6tfeiYdXnI+3c5BRfyfvtUnLJKs3zSdUsobfUdLrWalNVMAON0EWQIwWOagjFTsxU2/ZKEjgKvD7MjMzdL0xSdv504E+Cmpc=
-  file_glob: true
-  file: dist/snakeoil-*.tar.gz
-  skip_cleanup: true
-  on:
-    tags: true
+stages:
+  - test
+  - name: deploy
+    if: branch = master
+    if: type IN (push, api)
+    if: tag IS present
+
+jobs:
+  include:
+    # push tarball and wheels to pypi
+    - stage: deploy
+      python: 3.6
+      script: pkgdist/build-dist-files.sh
+    # push tarball to github
+    - stage: deploy
+      python: 3.6
+      script:
+        - pip install requirements/build.txt
+        - python setup.py sdist
+      deploy:
+        provider: releases
+        api_key:
+          secure: d1KgGpoHFf/au8m+08NItMGuENBZB5qwuVpobhtmZ2RQUo/uS6e0GoGa/k7OD0+3dQwzsSvJNMs6tfeiYdXnI+3c5BRfyfvtUnLJKs3zSdUsobfUdLrWalNVMAON0EWQIwWOagjFTsxU2/ZKEjgKvD7MjMzdL0xSdv504E+Cmpc=
+        file_glob: true
+        file: dist/snakeoil-*.tar.gz
+        skip_cleanup: true
+        on:
+          tags: true
